--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="pt-br"></html>
+    <meta charset="UTF-8">
+    <title>BABY CLOTHING</title>
+
+
 BABY CLOTHING
 SE SINTA A VONTADE PARA FAZER SUAS COMPRAS
 E ESCOLHER O MELHOR LOOK PARA SEU BEBÊ FICAR
