--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-br"></html>
     <meta charset="UTF-8">
     <title>BABY CLOTHING</title>
+    <h1>Sobre BABY CLOTHING</h1>
 
 
-BABY CLOTHING
-SE SINTA A VONTADE PARA FAZER SUAS COMPRAS
-E ESCOLHER O MELHOR LOOK PARA SEU BEBÊ FICAR
-AINDA MAIS ESTILOSO.
+<p>BABY CLOTHING
+<p>SE SINTA A VONTADE PARA FAZER SUAS COMPRAS
+<p>E ESCOLHER O MELHOR LOOK PARA SEU BEBÊ FICAR
+AINDA MAIS ESTILOSO.</p>
