--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br"></html>
-    <meta charset="UTF-8">
-    <title>BABY CLOTHING</title>
-    <h1>Sobre BABY CLOTHING</h1>
+     <head>
+        <meta charset="UTF-8">
+        <title>BABY CLOTHING</title>
+     </head>
+     <body>
+        <h1>Sobre BABY CLOTHING</h1>
 
 
-<p>BABY CLOTHING
-<p>SE SINTA A VONTADE PARA FAZER SUAS COMPRAS
-<p>E ESCOLHER O MELHOR LOOK PARA SEU BEBÊ FICAR
-AINDA MAIS ESTILOSO.</p>
+       <p>BABY CLOTHING
+       <p>SE SINTA A VONTADE PARA FAZER SUAS COMPRAS
+       <p>E ESCOLHER O MELHOR LOOK PARA SEU BEBÊ FICAR
+        AINDA MAIS ESTILOSO.</p>
+    </body>
+  </html>
